out.txt
Programs/p_1_2_3.cpp: In function ‘int main()’:
Programs/p_1_2_3.cpp:5:7: error: expected primary-expression before ‘?’ token
  cout??"hello world";
       ^
Programs/p_1_2_3.cpp:5:21: error: expected ‘:’ before ‘;’ token
  cout??"hello world";
                     ^
Programs/p_1_2_3.cpp:5:21: error: expected primary-expression before ‘;’ token
Programs/p_1_2_3.cpp:5:21: error: expected ‘:’ before ‘;’ token
Programs/p_1_2_3.cpp:5:21: error: expected primary-expression before ‘;’ token
